# cvo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
cv_optimizer/: __init__.py  _progress.py  aligner.py  analyzer.py  banner.py  cache.py  cli.py  client.py  deepseek_client.py  docx_parser.py  exporters.py  gaps.py  gaps_cli.py  gemini_client.py  generator.py  interactive.py  match_score.py  models.py  openai_client.py  pdf_parser.py  prompts.py  providers.py  screen.py  setup_wizard.py  start.py  summary.py  url_fetcher.py
examples/: cv_example.json  offer_example.txt
